# DomoClock

./: .clang-format  .gitignore  astyle.bash  build.bash
.devcontainer/: .bashrc  Dockerfile  devcontainer.json
.github/workflows/: build.esp8266.yml  build.rp2040.yml  check-style.esp8266.yml  check-style.rp2040.yml  pipeline.yml
design/: Waveshare-RP2040-Touch-LCD-1.28.sll  Waveshare-RP2040-Touch-LCD-1.28.spj  Waveshare-RP2040-Touch-LCD-1.28_events.py
design/assets/: ui_font_Montsererat_bold_12_extended.fcfg  ui_font_Montserrat_light_120.c  ui_font_Montserrat_light_120.fcfg  (+4 more)
scripts/: arduino-cli.esp8266.yaml  code-format.py
src/core/: core.ino  (+3 more)
src/libraries/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
src/libraries/ui/src/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_hour_group.c  ui_comp_hour_group.h
src/libraries/ui/src/fonts/: ui_font_Montsererat_bold_12_extended.c  ui_font_Montserrat_light_72.c  ui_font_Montserrat_medium_12_extended.c
src/libraries/ui/src/images/: ui_img_background_png.c  ui_img_btn_bg_3_png.c  ui_img_sec_dot_png.c  ui_img_splash_screen_png.c  ui_img_weather_broken_clouds_png.c  ui_img_weather_clear_sky_png.c  ui_img_weather_cloud_fog_png.c  ui_img_weather_few_clouds_png.c  ui_img_weather_mist_png.c  ui_img_weather_png.c  ui_img_weather_rain_png.c  ui_img_weather_scattered_clouds_png.c  ui_img_weather_shower_rain_png.c  ui_img_weather_snow_png.c  ui_img_weather_thunderstorm_png.c
src/libraries/ui/src/screens/: ui_ScrClock.c  ui_Screen1.c  ui_SplashScreen.c
(+11 files in other folders)
